# pytest-external-blockers

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  README.rst  default.nix  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: pythonapp.yml
src/pytest_external_blockers/: __init__.py  _issue_trackers.py
testing/: test_acceptance.py  test_unit.py
