[metadata]
name = pytest-external-blockers
description = a special outcome for tests that are blocked for external reasons
url = https://github.com/RonnyPfannschmidt-RedHat/pytest-external-blockers

[options]
packages = find:
package_dir = =src
setup_requires = setuptools-scm
install_requires = pytest

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    external-blockers = pytest_external_blockers
