[metadata]
name = pytest_external_blockers
description = a special outcome for tests that are blocked for external reasons
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/RonnyPfannschmidt-RedHat/pytest-external-blockers
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
    attrs
    pytest
package_dir = =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    external-blockers = pytest_external_blockers._pytest_plugin
